Adds jvm arg to test in gradle build file